...
                                        <color key="textColor" systemColor="labelColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0es-hV-mgM">
                                        <rect key="frame" x="10" y="202" width="274" height="38"/>
                                        <accessibility key="accessibilityConfiguration" identifier="categoryTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="search"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5HY-ng-vVY">
                                        <rect key="frame" x="294" y="202" width="40" height="38"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="searchBtn" label="searchBtn">
                                            <accessibilityTraits key="traits" staticText="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="40" id="qZ6-mB-qP1"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
...
