...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="k09-2c-eTO" id="agt-GN-4dL"/>
                            <outlet property="delegate" destination="k09-2c-eTO" id="1B2-x2-gti"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="News" id="WbV-zA-7Ya"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="w68-TJ-x03" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1818.840579710145" y="80.357142857142847"/>
        </scene>
        <!--Navigation Controller-->
...
